@@ -34,12 +34,14 @@
   <tr><td class="graphbox" id="<TMPL_VAR ESCAPE="HTML" NAME="NAME">">
   <table>
       <!-- <a id="<TMPL_VAR ESCAPE="HTML" NAME="NAME">">&nbsp;</a> -->
-        <tr><td colspan="2"><h3 class="nobottom"><TMPL_VAR NAME="NAME"></h3></td></tr>
+        <tr><td colspan="2"><h3 class="nobottom"> <TMPL_VAR NAME="NAME"></h3></td></tr>
         <tr><td colspan="2"><hr class="ruler2" /></td></tr>
         <TMPL_LOOP NAME="SERVICES">
+		  <tr colspan=2><td></td></tr>
+		  <tr colspan=2><td><div class="lighttext">:: <a class="meek" href="<TMPL_VAR NAME="URL">"><TMPL_VAR NAME="LABEL"></a></div></td></tr>
           <tr>
-            <td><a href="<TMPL_VAR NAME="URL">"><img src="<TMPL_VAR NAME="IMGDAY">" alt="" <TMPL_IF NAME="IMGDAYWIDTH">width="<TMPL_VAR NAME="IMGDAYWIDTH">" </TMPL_IF> <TMPL_IF NAME="IMGDAYHEIGHT">height="<TMPL_VAR NAME="IMGDAYHEIGHT">"</TMPL_IF>/></a></td>
-            <td><a href="<TMPL_VAR NAME="URL">"><img src="<TMPL_VAR NAME="IMGWEEK">" alt="" <TMPL_IF NAME="IMGWEEKWIDTH">width="<TMPL_VAR NAME="IMGWEEKWIDTH">" </TMPL_IF> <TMPL_IF NAME="IMGWEEKHEIGHT">height="<TMPL_VAR NAME="IMGWEEKHEIGHT">"</TMPL_IF>/></a></td>
+            <td><a name="<TMPL_VAR ESCAPE="HTML" NAME="LABEL">"><a href="<TMPL_VAR NAME="URL">"><img src="<TMPL_VAR NAME="IMGDAY">" alt="<TMPL_VAR NAME="LABEL">" <TMPL_IF NAME="IMGDAYWIDTH">width="<TMPL_VAR NAME="IMGDAYWIDTH">" </TMPL_IF> <TMPL_IF NAME="IMGDAYHEIGHT">height="<TMPL_VAR NAME="IMGDAYHEIGHT">"</TMPL_IF>/></a></a></td>
+            <td><a href="<TMPL_VAR NAME="URL">"><img src="<TMPL_VAR NAME="IMGWEEK">" alt="<TMPL_VAR NAME="LABEL">" <TMPL_IF NAME="IMGWEEKWIDTH">width="<TMPL_VAR NAME="IMGWEEKWIDTH">" </TMPL_IF> <TMPL_IF NAME="IMGWEEKHEIGHT">height="<TMPL_VAR NAME="IMGWEEKHEIGHT">"</TMPL_IF>/></a></td>
           </tr>
         </TMPL_LOOP>
 	</table>
